# mrreason-setup

./: CHANGELOG.md  LICENSE  MrReason.cabal  MrReason.hs  README.md  code.scd  code.tidal  example.tidal  stack.yaml
Test/: Test.hs  TestUtils.hs
Test/MrReason/: ChordTest.hs  ProgressionTest.hs  UITest.hs
docs/: applying-western-music-theory.md  custom-conditional-functions.md  infrastructure-overview.md  live-coding-with-parts-and-segments.md  tidal-midi.md  tips-and-hints-for-live-coding-with-longer-sets.md
src/Sound/MrReason/: ConfigParser.hs  Setup.hs
src/Sound/Tidal/: MIDI.hs
test/Sound/: TestUtils.hs
test/Sound/MrReason/: ChordsSpec.hs  SetupSpec.hs
test/Sound/Tidal/: MIDISpec.hs
