cabal-version:       2.2

name:                MrReason
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            mrreason.org
license:             BSD-3-Clause
license-file:        LICENSE
author:              Thomas Grund
maintainer:          info@mrreason.org
copyright:           2024 Thomas Grund
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     Sound.MrReason.Setup
                       Sound.Tidal.MIDI
                       Sound.MrReason.ConfigParser
  build-depends:       base >= 4.7 && < 5,
                       containers < 0.7,
                       event-list >= 0.1.2,
                       tidal >= 1.9.3,
                       midi >= 0.2.2.4,
                       aeson >= 2.1.2.1,
                       split >= 0.2.5
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

test-suite MrReason-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Sound.Tidal.MIDISpec
                       Sound.MrReason.SetupSpec
                       Sound.TestUtils
                       Sound.MrReason.ChordsSpec
  build-depends:       base
                     , MrReason
                     , hspec
                     , QuickCheck
                     , tidal >= 1.9.3
                     , containers < 0.7
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/githubuser/MrReason
